horizontal scroll issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -61,7 +61,6 @@ transform-origin: 50% 50%;
 
 *{box-sizing: border-box}
 
-html,
 body {
     overflow-x: hidden;
 	  font-size: 14px;
@@ -643,7 +642,6 @@ p {
 }
 /* make all images responsive */
 img {
-
     height: auto;
 		margin: 0 auto;
 display: block;
@@ -837,6 +835,10 @@ anchor a {
 
 @media only screen and (min-width: 375px) and (max-width: 500px){
 
+  body {
+      overflow: hidden!important;
+  }
+
 	ul.footer-info{
 	    width: 52%;
 	    font-size: 11px;
@@ -887,7 +889,6 @@ section.content div {
 
 
 	@media only screen and (max-width: 768px) {
-
 
     .fab {
         font-family: "Font Awesome 5 Brands";
@@ -949,3 +950,9 @@ section.content div {
 			max-width: 135px;
 		}
 	}
+
+  @media screen and (max-width: 375px) {
+   body {
+       overflow: hidden!important;
+   }
+}
